<resources>
    <string name="app_name">JustJava_ViewBinding</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="starting_number">0</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="zero_dollars">$0</string>
    <string name="order">ORDER</string>
    <string name="lessThanOne">Can\'t order less than 1 cup</string>
    <string name="moreThanTen">Can\'t order more than 10 cups</string>
</resources>