<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

    <EditText
        android:id="@+id/enter_text"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        />

    <TextView
        android:id="@+id/toppings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/enter_text"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/whipped_cream"
        app:layout_constraintTop_toBottomOf="@id/toppings_textView"/>

    <CheckBox
        android:id="@+id/chocolate_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/chocolate"
        app:layout_constraintTop_toBottomOf="@id/whipped_cream_checkBox"/>

    <TextView
        android:id="@+id/quantity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="32sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/chocolate_checkBox"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp">

    <Button
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/quantity_textView"
        />

    <TextView
        android:id="@+id/num_coffee_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/starting_number"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/minus_button"
        app:layout_constraintBaseline_toBaselineOf="@id/minus_button"/>

    <Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/num_coffee_textView"
        app:layout_constraintBaseline_toBaselineOf="@id/num_coffee_textView"/>

</LinearLayout>

    <TextView
        android:id="@+id/order_summary_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textSize="32sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/minus_button"
        />

    <TextView
        android:id="@+id/total_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_dollars"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/order_summary_textView"
        />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/total_amount_textView"
        />

    </LinearLayout>

</ScrollView>